# FileOp

./: .clang-format  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  Changelog.md  FileOp.code-workspace  LICENSE  README.md  cspell.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml
scripts/: .gitignore  cmake.build.sh  cmake.configure.sh  cmake.test.sh  container.setup.sh  get_pe_header.rc.sh  get_readme.md.sh  get_version.sh  run_test_performance.sh
src/: BasicFileOp.c  BasicFileOp.h  CMakeLists.txt  FileOp.c  FileOp.h  Message.c  Message.h  OperationCat.c  OperationCat.cmake  OperationCat.h  OperationCopy.c  OperationCopy.cmake  OperationCopy.h  OperationMkdir.c  OperationMkdir.cmake  OperationMkdir.h  OperationMove.c  OperationMove.cmake  OperationMove.h  OperationRemove.c  OperationRemove.cmake  OperationRemove.h  OperationTouch.c  OperationTouch.cmake  OperationTouch.h  Types.h  mingw-unicode.c  mingw64.toolchain
